# analytics_cup_research

./: README.md  pyproject.toml  submission copy.ipynb  submission.ipynb
src/: analyze.py  data_loader.py
