[project]
name = "soccer-analysis"
version = "0.1.0"
description = "Soccer data analysis with kloppy and mplsoccer"
requires-python = ">=3.11"
dependencies = [
    "kloppy==3.15.0",
    "mplsoccer==1.5.1",
    "dash==3.3.0",
    "streamlit>=1.31.0",
    "pandas==2.1.3",
    "plotly==6.4.0",
    "scipy==1.16.2",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipykernel>=6.29.0",
    "numpy>=1.24.0",
    "requests>=2.32.0",
    "ipywidgets>=8.1.0",
    "skillcorner>=0.1.0",
]
